--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     # Dockerfileがあるディレクトリ
     build: .
     # buildした時に実行するコマンド
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     # ホスト上のディレクトリをコンテナにマウント
     volumes:
       - .:/app_name   # このフォルダを`/app`にマウントするという意味です。
