--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2
 jobs: 
   build: 
     docker: 
-      - image: circleci/ruby:2.6.3
+      - image: circleci/ruby:2.6.3-stretch-node
     working_directory: ~/repo
     steps: 
       - checkout
@@ -22,4 +22,4 @@ jobs:
       - save_cache:
         paths:
           - ./vendor/bundle
-        keys: v1-dependencies-{{ checksum "Gemfile.lock" }}
+        key: v1-dependencies-{{ checksum "Gemfile.lock" }}
