--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
   build: 
     docker: 
       - image: circleci/ruby:2.6.3-stretch-node
+      - image: mysql:5.7
     working_directory: ~/repo
     steps: 
       - checkout
@@ -47,6 +48,33 @@ jobs:
           command: |
             docker push ${ECR_DOMAIN}:$CIRCLE_SHA1
             docker push ${ECR_DOMAIN}:latest
+  deploy:
+    docker:
+      - image: circleci/python:3.7
+    steps:
+      - run:
+          name: install aws cli
+          command: |
+            sudo pip install awscli
+      - run:
+          name: download jq
+          command: |
+            wget https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
+            mv jq-linux64 jq
+      - run:
+          name: login
+          command: |
+            $(aws ecr get-login --no-include-email --region ap-northeast-1)
+      - run:
+          name: deploy
+          command: |
+            aws ecs describe-task-definition --task-definition webapp-service | jq '.taskDefinition | { containerDefinitions: .containerDefinitions }' > definition.json
+            aws ecs register-task-definition --execution-role-arn arn:aws:iam::674656733927:role/ecs-task-role --family webapp-service --cli-input-json file://definition.json
+            aws ecs update-service --cluster sample-ecs-cluster --service webapp-service --task-definition webapp-service
+      - run:
+          name: migration
+          command: |
+            aws ecs run-task --cluster sample-ecs-cluster --task-definition rails-migrate
 workflows:
   version: 2
   test:
