--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,20 +28,19 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-      # エラーでCircleCIが通らないの一旦コメントアウト
-      # - run: bundle exec rake db:create
-      # - run: bundle exec rake db:schema:load
-      # - run:
-      #     name: Rspec
-      #     command: |
-      #       mkdir /tmp/test-results
-      #       TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
-      #         circleci tests split --split-by=timings)"
-      #       bundle exec rspec \
-      #         --format progress \
-      #         --out /tmp/test-results/rspec.xml \
-      #         --format progress \
-      #         $TEST_FILES
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
+      - run:
+          name: Rspec
+          command: |
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
+              circleci tests split --split-by=timings)"
+            bundle exec rspec \
+              --format progress \
+              --out /tmp/test-results/rspec.xml \
+              --format progress \
+              $TEST_FILES
   build_image:
     docker:
       - image: docker:19.03.5
