--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -20,7 +20,7 @@ services:
     # Dockerfileがあるディレクトリ
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.ci
     # buildした時に実行するコマンド
     command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     # ホスト上のディレクトリをコンテナにマウント
