--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,9 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV.fetch("DB_USERNAME") { 'root' } %>
-  password: <%= ENV.fetch("DB_PASSWORD") { 'password' } %>
-  host: <%= ENV.fetch("DB_HOST") { 'localhost' } %>
+  # password: <%= ENV.fetch("DB_PASSWORD") { 'password' } %>
+  password: password
+  host: <%= ENV.fetch("DB_HOST") { 'db' } %>
 
 development:
   <<: *default
