--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ jobs:
       - image: circleci/ruby:2.6.3-stretch-node
         environment:
           RAILS_ENV: test
+          RACK_ENV: test
           DB_HOST: 127.0.0.1
-          DB_USERNAME: 'root'
       - image: circleci/mysql:5.7
         environment:
           MYSQL_USER: root
