--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
         environment:
           RAILS_ENV: test
           RACK_ENV: test
-          DB_HOST: 127.0.0.1
+          DB_HOST: localhost
       - image: circleci/mysql:5.7
         environment:
           MYSQL_USER: root
@@ -31,7 +31,7 @@ jobs:
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
       - run:
           name: Wait for DB
-          command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
+          command: dockerize -wait tcp://localhost:3306 -timeout 120s
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
       - run:
