--- a/config/database.yml
+++ b/config/database.yml
@@ -3,12 +3,12 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  # password: password
   host: db
 
 development:
   <<: *default
   database: app_name_development
+  password: password
   host: db
 
 test:
