--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,7 @@ development:
 test:
   <<: *default
   database: app_name_test
+  password: password
   host: <%= ENV.fetch("DB_HOST") { 'db' } %>
   socket: /tmp/mysql.sock
 
