--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -21,6 +21,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.ci
+    container_name: weinance_app
     # buildした時に実行するコマンド
     command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     # ホスト上のディレクトリをコンテナにマウント
@@ -36,8 +37,8 @@ services:
     tty: true
     stdin_open: true
 
-  # # Headless chrome用
-  # chrome:
-  #   image: selenium/standalone-chrome
-  #   ports:
-  #     - "4444:4444"
+  # Headless chrome用
+  chrome:
+    image: selenium/standalone-chrome
+    ports:
+      - "4444:4444"
