[fix]Dockerfile.ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ workflows:
     jobs:
       - build
       - build_image:
+          dockerfile: Dockerfile.ci
           requires:
             - build
           filters:
