--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -37,7 +37,7 @@ services:
     stdin_open: true
 
   # Headless chrome用
-  # chrome:
-  #   image: selenium/standalone-chrome
-  #   ports:
-  #     - "4444:4444"
+  chrome:
+    image: selenium/standalone-chrome
+    ports:
+      - "4444:4444"
