--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2.1
+version: 2
 jobs: 
   build: 
     docker: 
@@ -51,7 +51,7 @@ jobs:
       - run:
           name: build image
           command: |
-            docker build -t ${ECR_DOMAIN}:$CIRCLE_SHA1 -t ${ECR_DOMAIN}:latest --build-arg RAILS_MASTER_KEY=${RAILS_MASTER_KEY} --build-arg RAILS_ENV=production .
+            docker build -f Dockerfile.ci -t ${ECR_DOMAIN}:$CIRCLE_SHA1 -t ${ECR_DOMAIN}:latest --build-arg RAILS_MASTER_KEY=${RAILS_MASTER_KEY} --build-arg RAILS_ENV=production .
       - run:
           name: Push docker image
           command: |
@@ -90,7 +90,6 @@ workflows:
     jobs:
       - build
       - build_image:
-          dockerfile: Dockerfile.ci
           requires:
             - build
           filters:
