--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     tty: true
     stdin_open: true
 
-  Headless chrome用
+  # Headless chrome用
   chrome:
     image: selenium/standalone-chrome
     ports:
